--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,20 @@
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+
+.demo-container {
+	width: 100%;
+	height: 530px;
+	position: relative;
+	overflow: hidden;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+}
+
+.rect {
+	width: 80px;
+	height: 80px;
+	position: absolute;
+	left: -1000px;
+	top: -1000px;
+}
