update, background-position

--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,14 @@
 	left: -1000px;
 	top: -1000px;
 }
+
+#drag {
+	/*background-image: url('psmove.png');*/
+}
+
+.duplicate {
+	border: 1px solid #000;
+	background-image: url('psmove.png');
+	width: 80px;
+	height: 80px;
+}
