--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,16 @@
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	font-family: Raleway, Arial, sans-serif;
+	text-align: center;
+}
+
+header {
+	padding-top: 5rem;
+}
+
+h1 {
+	margin-bottom: .5rem;
 }
 
 .demo-container {
