--- a/skeleton.css
+++ b/skeleton.css
@@ -169,7 +169,8 @@ a:hover {
 button,
 input[type="submit"],
 input[type="reset"],
-input[type="button"] {
+input[type="button"],
+label.button-primary {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
@@ -201,7 +202,7 @@ input[type="button"]:focus {
   border-color: #888;
   outline: 0; }
 .button.button-primary,
-button.button-primary,
+.button-primary,
 input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
@@ -209,19 +210,18 @@ input[type="button"].button-primary {
   background-color: #33C3F0;
   border-color: #33C3F0; }
 .button.button-primary:hover,
-button.button-primary:hover,
+.button-primary:hover,
 input[type="submit"].button-primary:hover,
 input[type="reset"].button-primary:hover,
 input[type="button"].button-primary:hover,
 .button.button-primary:focus,
-button.button-primary:focus,
+.button-primary:focus,
 input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
   color: #FFF;
   background-color: #1EAEDB;
   border-color: #1EAEDB; }
-
 
 /* Forms
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
