--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,32 @@ h1 {
 	width: 80px;
 	height: 80px;
 }
+
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.inputfile + label {
+    display: inline-block;
+}
+
+
+.inputfile + label {
+	cursor: pointer; /* "hand" cursor */
+}
+
+label.button-primary {
+  color: #FFF;
+  background-color: #33C3F0;
+  border-color: #33C3F0; 
+}
+
+#track {
+	display: block;
+	margin: auto;
+}
